[package]
name = "ample_geyser_gateway"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
solana-geyser-plugin-manager = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-message = { workspace = true }
solana-transaction-error = { workspace = true }

transport = { workspace = true }
anyhow = "1.0.100"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rustls = { workspace = true }
opentelemetry = { workspace = true }
lru = "0.16.2"
