[package]
name = "ample_geyser_proxy"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
parking_lot = "0.12.5"
tracing = { workspace = true }
tokio = { workspace = true }
agave-geyser-plugin-interface = { workspace = true }
solana-clock = { workspace = true }
solana-signature = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction = { workspace = true }
solana-logger = { workspace = true }
transport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
